--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--cap section-->
         <section>
         <h1>Эффективные решения для вашего бизнеса</h1>
-        <a href="#">Заказать услугу</a>
+        <button type="button">Заказать услугу</button>
         </section>
 
         <!--Advantages section-->
