--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/images/box1.jpg" alt="box" width="370"></li>
-                <li><img src="/images/box2.jpg" alt="box2" width="370"></li>
-                <li><img src="/images/box3.jpg" alt="box3" width="370"></li>
+                <li><img src="/images/box1.jpg" alt="фото1" width="370"></li>
+                <li><img src="/images/box2.jpg" alt="фото2" width="370"></li>
+                <li><img src="/images/box3.jpg" alt="фото3" width="370"></li>
             </ul>
         </section>
 
