--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="/images/box1.jpg" alt="фото1" width="370"></li>
-                <li><img src="/images/box2.jpg" alt="фото2" width="370"></li>
-                <li><img src="/images/box3.jpg" alt="фото3" width="370"></li>
+                <li><img src="./images/box1.jpg" alt="фото1" width="370"></li>
+                <li><img src="./images/box2.jpg" alt="фото2" width="370"></li>
+                <li><img src="./images/box3.jpg" alt="фото3" width="370"></li>
             </ul>
         </section>
 
@@ -66,22 +66,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="/images/img.jpg" alt="Игорь Демьяненко" width="270">
+                    <img src="./images/img.jpg" alt="Игорь Демьяненко" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="/images/img2.jpg" alt="Ольга Репина" width="270">
+                    <img src="./images/img2.jpg" alt="Ольга Репина" width="270">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="/images/img3.jpg" alt="Николай Тарасов" width="270">
+                    <img src="./images/img3.jpg" alt="Николай Тарасов" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="/images/img4.jpg" alt="Михаил Ермаков" width="270">
+                    <img src="./images/img4.jpg" alt="Михаил Ермаков" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
