--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <a href="/">WebStudio</a>
         <address>
             <ul>
-                <li><a href="https://goo.gl/maps/H3b8MQTvL6khPhJT9">г. Киев, пр-т Леси Украинки, 26</a></li>
+                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
